m-24 v-3: Different ways of addEventListener

--- a/Milestone_5/Module_24/01_About Module 24.html
+++ b/Milestone_5/Module_24/01_About Module 24.html
@@ -21,6 +21,13 @@
             <li>Onclick add directly or external</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Different ways to use addEventListener on a button
+        </h2>
+        <ul>
+            <li>Different ways of addEventListener</li>
+        </ul>
+    </div>
 
 </body>
 </html>
