--- a/Milestone_5/Module_24/01_About Module 24.html
+++ b/Milestone_5/Module_24/01_About Module 24.html
@@ -28,6 +28,13 @@
             <li>Different ways of addEventListener</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Most common ways to set Event Handlers
+        </h2>
+        <ul>
+            <li>Set Handlers by common way</li>
+        </ul>
+    </div>
 
 </body>
 </html>
