m-24 v-5: How to add comment

--- a/Milestone_5/Module_24/01_About Module 24.html
+++ b/Milestone_5/Module_24/01_About Module 24.html
@@ -35,6 +35,13 @@
             <li>Set Handlers by common way</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Create a comment box and display comment
+        </h2>
+        <ul>
+            <li>How to add comment</li>
+        </ul>
+    </div>
 
 </body>
 </html>
