--- a/Milestone_5/Module_24/01_About Module 24.html
+++ b/Milestone_5/Module_24/01_About Module 24.html
@@ -42,6 +42,13 @@
             <li>How to add comment</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(semi-advanced) Event bubble and Stop propagating
+        </h2>
+        <ul>
+            <li>Event bubble and propagation</li>
+        </ul>
+    </div>
 
 </body>
 </html>
