--- a/Milestone_5/Module_24/01_About Module 24.html
+++ b/Milestone_5/Module_24/01_About Module 24.html
@@ -49,6 +49,13 @@
             <li>Event bubble and propagation</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.(advanced) Event delegate and benefit of Event bubble
+        </h2>
+        <ul>
+            <li>Event delegate, remove any item</li>
+        </ul>
+    </div>
 
 </body>
 </html>
