m-24 v-9: Recape the module

--- a/Milestone_5/Module_24/01_About Module 24.html
+++ b/Milestone_5/Module_24/01_About Module 24.html
@@ -56,6 +56,13 @@
             <li>Event delegate, remove any item</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.DOM events summary and home work
+        </h2>
+        <ul>
+            <li>Recape the module</li>
+        </ul>
+    </div>
 
 </body>
 </html>
