--- a/Milestone_5/Module_25/01.index.html
+++ b/Milestone_5/Module_25/01.index.html
@@ -16,11 +16,13 @@
         <section class="bg-green-200 w-3/4 mx-auto rounded-xl mt-12">
             <h3 class="text-2xl p-4 text-center">Please! Login</h3>
             <div >
-                <input class="block border rounded m-4 p-1 w-3/4" type="email" name="" id="" placeholder="your email">
-                <input class="block border rounded m-4 p-1 w-3/4" type="password" name="" id="" placeholder="password">
-                <button class="m-4 bg-yellow-300 px-4 py-2 rounded	">Submit</button>
+                <input id="inputEmail" class="block border rounded m-4 p-1 w-3/4" type="email" name="" placeholder="your email">
+                <input id="inputPassword" class="block border rounded m-4 p-1 w-3/4" type="password" name="" placeholder="password">
+                <button id="submitButton" class="m-4 bg-yellow-300 px-4 py-2 rounded	">Submit</button>
             </div>
         </section>
     </main>
+
+    <script src="03.Bank.js"></script>
 </body>
 </html>
