--- a/Milestone_5/Module_25/01_About Module 25.html
+++ b/Milestone_5/Module_25/01_About Module 25.html
@@ -21,6 +21,13 @@
             <li>Login form</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Add event listener navigate to another page
+        </h2>
+        <ul>
+            <li>User vallidation and redirect another page</li>
+        </ul>
+    </div>
 
 </body>
 </html>
