m-25 v-4: Deposit, withdraw, Total

--- a/Milestone_5/Module_25/03.Banking.html
+++ b/Milestone_5/Module_25/03.Banking.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Tailwind CSS -->
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="text-6xl">Start your banking</h1>
+    <header>
+        <h1 class="text-5xl	text-center mt-16">Lets get some money form @<span class="text-purple-600">AD Bank</span>@</h1>
+    </header>
+    <section>
+        <div class="mt-8">
+            <div class="grid grid-cols-3 gap-4 w-3/4 mx-auto text-white">
+                <div class="bg-blue-300 p-8 rounded text-center">
+                    <h3 class="text-2xl">Deposite</h3>
+                    <h4 class="text-4xl">$00</h4>
+                </div>
+                <div class="bg-green-300 p-8 rounded text-center">
+                    <h3 class="text-2xl">Withdrow</h3>
+                    <h4 class="text-4xl">$00</h4>
+                </div>
+                <div class="bg-yellow-300 p-8 rounded text-center">
+                    <h3 class="text-2xl">Total</h3>
+                    <h4 class="text-4xl">$00</h4>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
