m-25 v-5: Deposit and withdraw Fields

--- a/Milestone_5/Module_25/01_About Module 25.html
+++ b/Milestone_5/Module_25/01_About Module 25.html
@@ -35,6 +35,13 @@
             <li>Deposit, withdraw, Total</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Create Deposit and withdraw amount Input Fields
+        </h2>
+        <ul>
+            <li>Deposit and withdraw Fields</li>
+        </ul>
+    </div>
 
 </body>
 </html>
