m-25 v-6: Deposit value change by new deposite

--- a/Milestone_5/Module_25/01.index.html
+++ b/Milestone_5/Module_25/01.index.html
@@ -23,6 +23,6 @@
         </section>
     </main>
 
-    <script src="03.Bank.js"></script>
+    <script src="03.login.js"></script>
 </body>
 </html>
