--- a/Milestone_5/Module_25/01_About Module 25.html
+++ b/Milestone_5/Module_25/01_About Module 25.html
@@ -42,6 +42,13 @@
             <li>Deposit and withdraw Fields</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Get User deposit and set deposit total value
+        </h2>
+        <ul>
+            <li>Deposit value change by new deposite</li>
+        </ul>
+    </div>
 
 </body>
 </html>
