--- a/Milestone_5/Module_25/03.Banking.html
+++ b/Milestone_5/Module_25/03.Banking.html
@@ -19,7 +19,7 @@
                 <div class="grid grid-cols-3 gap-4 w-3/4 mx-auto text-white">
                     <div class="bg-blue-300 p-8 rounded text-center">
                         <h3 class="text-2xl">Deposite</h3>
-                        <h4 class="text-4xl">$00</h4>
+                        <h4 class="text-4xl">$ <span id="depositeMoney">00</span> </h4>
                     </div>
                     <div class="bg-green-300 p-8 rounded text-center">
                         <h3 class="text-2xl">Withdrow</h3>
@@ -40,14 +40,14 @@
                     <div class="bg-red-100 p-8 rounded">
                         <h3 class="text-2xl">Please! Deposite</h3>
                         <div class="">
-                            <input id="depositeAmount" class="block border rounded m-4 p-1 w-3/4" type="text" name="" placeholder="Enter amount of money">
+                            <input id="depositeAmount" class="block border rounded m-4 p-1 w-3/4 text-black" type="text" name="" placeholder="Enter amount of money">
                             <button id="depositeButton" class="m-4 bg-yellow-300 px-4 py-2 rounded">Deposite</button>
                         </div>
                     </div>
                     <div class="bg-purple-100 p-8 rounded">
                         <h3 class="text-2xl">Please! Withdrow</h3>
                         <div class="">
-                            <input id="withdrowAmount" class="block border rounded m-4 p-1 w-3/4" type="text" name="" placeholder="Enter amount of money">
+                            <input id="withdrowAmount" class="block border rounded m-4 p-1 w-3/4 text-black" type="text" name="" placeholder="Enter amount of money">
                             <button id="withdrowButton" class="m-4 bg-yellow-300 px-4 py-2 rounded">Withdrow</button>
                         </div>
                     </div>
@@ -56,5 +56,8 @@
         </section>
 
     </main>
+
+    <script src="06.banking.js"></script>
+
 </body>
 </html>
