--- a/Milestone_5/Module_25/01_About Module 25.html
+++ b/Milestone_5/Module_25/01_About Module 25.html
@@ -49,6 +49,13 @@
             <li>Deposit value change by new deposite</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Update deposit and balance and handle string add
+        </h2>
+        <ul>
+            <li>Update deposit and balance</li>
+        </ul>
+    </div>
 
 </body>
 </html>
