--- a/Milestone_5/Module_25/03.Banking.html
+++ b/Milestone_5/Module_25/03.Banking.html
@@ -19,7 +19,7 @@
                 <div class="grid grid-cols-3 gap-4 w-3/4 mx-auto text-white">
                     <div class="bg-blue-300 p-8 rounded text-center">
                         <h3 class="text-2xl">Deposite</h3>
-                        <h4 class="text-4xl">$ <span id="depositeMoney">00</span> </h4>
+                        <h4 class="text-4xl">$<span id="depositeMoney">00</span> </h4>
                     </div>
                     <div class="bg-green-300 p-8 rounded text-center">
                         <h3 class="text-2xl">Withdrow</h3>
@@ -27,7 +27,7 @@
                     </div>
                     <div class="bg-yellow-300 p-8 rounded text-center">
                         <h3 class="text-2xl">Total</h3>
-                        <h4 class="text-4xl">$00</h4>
+                        <h4 class="text-4xl">$<span id="totalMoney">1200</span></h4>
                     </div>
                 </div>
             </div>
