m-25 v-8: Money withdraw and reduce balance

--- a/Milestone_5/Module_25/01_About Module 25.html
+++ b/Milestone_5/Module_25/01_About Module 25.html
@@ -56,6 +56,13 @@
             <li>Update deposit and balance</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Money withdraw and reduce balance for withdraw
+        </h2>
+        <ul>
+            <li>Money withdraw and reduce balance</li>
+        </ul>
+    </div>
 
 </body>
 </html>
