--- a/Milestone_5/Module_25/03.Banking.html
+++ b/Milestone_5/Module_25/03.Banking.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="bg-green-300 p-8 rounded text-center">
                         <h3 class="text-2xl">Withdrow</h3>
-                        <h4 class="text-4xl">$00</h4>
+                        <h4 class="text-4xl">$<span id="withdrowMoney">00</span></h4>
                     </div>
                     <div class="bg-yellow-300 p-8 rounded text-center">
                         <h3 class="text-2xl">Total</h3>
