--- a/Milestone_5/Module_26/01_About Module 26.html
+++ b/Milestone_5/Module_26/01_About Module 26.html
@@ -14,6 +14,13 @@
             <li>Module Overview</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2 Get User Deposit And Set Deposit Total Value
+        </h2>
+        <ul>
+            <li>Total Deposite calculation</li>
+        </ul>
+    </div>
 
 </body>
 </html>
