m-26 v-3: Total balance calculation

--- a/Milestone_5/Module_26/01_About Module 26.html
+++ b/Milestone_5/Module_26/01_About Module 26.html
@@ -15,10 +15,17 @@
         </ul>
     </div>
     <div class="video">
-        <h2>2 Get User Deposit And Set Deposit Total Value
+        <h2>2.Get User Deposit And Set Deposit Total Value
         </h2>
         <ul>
             <li>Total Deposite calculation</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>3.Update Deposit And Balance And Handle String Add
+        </h2>
+        <ul>
+            <li>Total balance calculation</li>
         </ul>
     </div>
 
