--- a/Milestone_5/Module_26/01_About Module 26.html
+++ b/Milestone_5/Module_26/01_About Module 26.html
@@ -28,6 +28,13 @@
             <li>Total balance calculation</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Money Withdraw And Reduce Balance For Withdraw
+        </h2>
+        <ul>
+            <li>Withdraw And Reduce Balance</li>
+        </ul>
+    </div>
 
 </body>
 </html>
