--- a/Milestone_5/Module_26/01_About Module 26.html
+++ b/Milestone_5/Module_26/01_About Module 26.html
@@ -35,6 +35,13 @@
             <li>Withdraw And Reduce Balance</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.(Advanced) Common Function To Reduce Code Repeat
+        </h2>
+        <ul>
+            <li>Common Function</li>
+        </ul>
+    </div>
 
 </body>
 </html>
