--- a/Milestone_5/Module_26/01_About Module 26.html
+++ b/Milestone_5/Module_26/01_About Module 26.html
@@ -42,6 +42,13 @@
             <li>Common Function</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.(Advanced) Share One Function Between Two Input Field
+        </h2>
+        <ul>
+            <li>Share Common Function</li>
+        </ul>
+    </div>
 
 </body>
 </html>
