m-25 v-7: Deposit And Withdraw Update

--- a/Milestone_5/Module_26/01_About Module 26.html
+++ b/Milestone_5/Module_26/01_About Module 26.html
@@ -49,6 +49,13 @@
             <li>Share Common Function</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(Advanced) Deposit And Withdraw Update With One Function
+        </h2>
+        <ul>
+            <li>Deposit And Withdraw Update</li>
+        </ul>
+    </div>
 
 </body>
 </html>
