m-26 v-8: Balance Update Function

--- a/Milestone_5/Module_26/01_About Module 26.html
+++ b/Milestone_5/Module_26/01_About Module 26.html
@@ -56,6 +56,13 @@
             <li>Deposit And Withdraw Update</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Advanced) Shared Balance Update Function
+        </h2>
+        <ul>
+            <li>Balance Update Function</li>
+        </ul>
+    </div>
 
 </body>
 </html>
