--- a/Milestone_5/Module_26/01_About Module 26.html
+++ b/Milestone_5/Module_26/01_About Module 26.html
@@ -63,6 +63,13 @@
             <li>Balance Update Function</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.(Advanced) Nested Function And Error Handling
+        </h2>
+        <ul>
+            <li>Error Handling</li>
+        </ul>
+    </div>
 
 </body>
 </html>
