m-27 v-2: Case price update

--- a/Milestone_5/Module_27/01_About Module 26.5.html
+++ b/Milestone_5/Module_27/01_About Module 26.5.html
@@ -14,6 +14,13 @@
             <li>Increase case number</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.shopping cart handle decrease and update price
+        </h2>
+        <ul>
+            <li>Case price update</li>
+        </ul>
+    </div>
 
 </body>
 </html>
