--- a/Milestone_5/Module_27/01_About Module 26.5.html
+++ b/Milestone_5/Module_27/01_About Module 26.5.html
@@ -18,7 +18,7 @@
         <h2>2.shopping cart handle decrease and update price
         </h2>
         <ul>
-            <li>Case price update</li>
+            <li>Case price update.</li>
         </ul>
     </div>
 
