--- a/Milestone_5/Module_27/01_About Module 27.html
+++ b/Milestone_5/Module_27/01_About Module 27.html
@@ -21,6 +21,13 @@
             <li>Case price update.</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Calculate phone cost using the same shared function
+        </h2>
+        <ul>
+            <li>Phone price update</li>
+        </ul>
+    </div>
 
 </body>
 </html>
