--- a/Milestone_5/Module_27/01_About Module 27.html
+++ b/Milestone_5/Module_27/01_About Module 27.html
@@ -28,6 +28,13 @@
             <li>Phone price update</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Get all product sub total cost, tax and grand total
+        </h2>
+        <ul>
+            <li>Total price update</li>
+        </ul>
+    </div>
 
 </body>
 </html>
