--- a/Milestone_5/Module_27/01_About Module 27.html
+++ b/Milestone_5/Module_27/01_About Module 27.html
@@ -35,6 +35,13 @@
             <li>Total price update</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Pin matcher overview, Generate pin and display it
+        </h2>
+        <ul>
+            <li>Pin generate and display</li>
+        </ul>
+    </div>
 
 </body>
 </html>
