--- a/Milestone_5/Module_27/01_About Module 27.html
+++ b/Milestone_5/Module_27/01_About Module 27.html
@@ -42,6 +42,13 @@
             <li>Pin generate and display</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Use event bubble to create calculator and clear
+        </h2>
+        <ul>
+            <li>Caltulator input</li>
+        </ul>
+    </div>
 
 </body>
 </html>
