--- a/Milestone_5/Module_27/01_About Module 27.html
+++ b/Milestone_5/Module_27/01_About Module 27.html
@@ -49,6 +49,13 @@
             <li>Caltulator input</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Verify match and use function to reduce duplicate
+        </h2>
+        <ul>
+            <li>Pin varifying</li>
+        </ul>
+    </div>
 
 </body>
 </html>
