--- a/Milestone_5/Module_27/01_About Module 27.html
+++ b/Milestone_5/Module_27/01_About Module 27.html
@@ -56,6 +56,13 @@
             <li>Pin varifying</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Pin Matcher overview and daily challenge
+        </h2>
+        <ul>
+            <li>Module Overview</li>
+        </ul>
+    </div>
 
 </body>
 </html>
