--- a/Milestone_5/Module_28/01_About Module 28.html
+++ b/Milestone_5/Module_28/01_About Module 28.html
@@ -14,6 +14,13 @@
             <li>Case converting</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Apply Search includes, indexOf, startswith, endswith
+        </h2>
+        <ul>
+            <li>String Search in array</li>
+        </ul>
+    </div>
 
 </body>
 </html>
