m-28 v-3: String devied and join

--- a/Milestone_5/Module_28/01_About Module 28.html
+++ b/Milestone_5/Module_28/01_About Module 28.html
@@ -21,6 +21,13 @@
             <li>String Search in array</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3 How to split, slice, substr, substring, concat, join
+        </h2>
+        <ul>
+            <li>String devied and join</li>
+        </ul>
+    </div>
 
 </body>
 </html>
