m-27 v-4: Finds value in array

--- a/Milestone_5/Module_28/01_About Module 28.html
+++ b/Milestone_5/Module_28/01_About Module 28.html
@@ -22,10 +22,17 @@
         </ul>
     </div>
     <div class="video">
-        <h2>3 How to split, slice, substr, substring, concat, join
+        <h2>3.How to split, slice, substr, substring, concat, join
         </h2>
         <ul>
             <li>String devied and join</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>4.Check an Array using isArray, indexOf, includes, concat
+        </h2>
+        <ul>
+            <li>Finds value in array</li>
         </ul>
     </div>
 
