--- a/Milestone_5/Module_28/01_About Module 28.html
+++ b/Milestone_5/Module_28/01_About Module 28.html
@@ -35,6 +35,13 @@
             <li>Finds value in array</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Get part of an array and insert elements using slice, splice
+        </h2>
+        <ul>
+            <li>Array parts</li>
+        </ul>
+    </div>
 
 </body>
 </html>
