--- a/Milestone_5/Module_28/01_About Module 28.html
+++ b/Milestone_5/Module_28/01_About Module 28.html
@@ -42,6 +42,13 @@
             <li>Array parts</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Have fun with sort and reverse a javascript array
+        </h2>
+        <ul>
+            <li>Array parts</li>
+        </ul>
+    </div>
 
 </body>
 </html>
