--- a/Milestone_5/Module_28/01_About Module 28.html
+++ b/Milestone_5/Module_28/01_About Module 28.html
@@ -46,7 +46,7 @@
         <h2>6.Have fun with sort and reverse a javascript array
         </h2>
         <ul>
-            <li>Array parts</li>
+            <li>Array Shorting</li>
         </ul>
     </div>
 
