--- a/Milestone_5/Module_28/01_About Module 28.html
+++ b/Milestone_5/Module_28/01_About Module 28.html
@@ -49,6 +49,13 @@
             <li>Array Shorting</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Unlimited parameters to a function using arguments
+        </h2>
+        <ul>
+            <li>Unlimited arguments accepts</li>
+        </ul>
+    </div>
 
 </body>
 </html>
