m-28 v-8: Discuss error types

--- a/Milestone_5/Module_28/01_About Module 28.html
+++ b/Milestone_5/Module_28/01_About Module 28.html
@@ -56,6 +56,13 @@
             <li>Unlimited arguments accepts</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Different types of Error object and explore Try-catch
+        </h2>
+        <ul>
+            <li>Discuss error types</li>
+        </ul>
+    </div>
 
 </body>
 </html>
