m-28 v-9: Discuss error types

--- a/Milestone_5/Module_28/01_About Module 28.html
+++ b/Milestone_5/Module_28/01_About Module 28.html
@@ -63,6 +63,13 @@
             <li>Discuss error types</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.A simple introduction to Date object in JavaScript
+        </h2>
+        <ul>
+            <li>Discuss error types</li>
+        </ul>
+    </div>
 
 </body>
 </html>
