title color change

--- a/Milestone_5/Module_28.5/leader-board-css3/index.html
+++ b/Milestone_5/Module_28.5/leader-board-css3/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section>
-            <h1 class="section-title">Top Player</h1>
+            <h1 id="players_title" onclick="colorChange('players')"  class="section-title">Top Player</h1>
             <div class="top-players">
                 <div class="player">
                     <img src="images/Ellipse.png" alt="">
@@ -46,7 +46,7 @@
             </div>
         </section>
         <section>
-            <h1 class="section-title">Top Blogs</h1>
+            <h1 id="blog_title" onclick="colorChange('blog')" class="section-title">Top Blogs</h1>
             <div class="blogs">
                 <article class="blog">
                     <div class="thumbnail">
@@ -152,6 +152,8 @@
             </div>
         </section>
     </main>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
