player color change

--- a/Milestone_5/Module_28.5/leader-board-css3/index.html
+++ b/Milestone_5/Module_28.5/leader-board-css3/index.html
@@ -18,7 +18,7 @@
     <main>
         <section>
             <h1 id="players_title" onclick="colorChange('players')"  class="section-title">Top Player</h1>
-            <div class="top-players">
+            <div id="top-players" class="top-players">
                 <div class="player">
                     <img src="images/Ellipse.png" alt="">
                     <h3>John Smith</h3>
