input field and increase field

--- a/Milestone_5/Module_28.5/leader-board-css3/index.html
+++ b/Milestone_5/Module_28.5/leader-board-css3/index.html
@@ -160,6 +160,11 @@
             </ul>
             <button id="createButton">Add New</button>
         </section>
+        <section>
+            <h2>Input Section</h2>
+            <input id="input" type="number" min="0" value="0">
+            <button id="plus_button">+</button>
+        </section>
     </main>
 
     <script src="script.js"></script>
