--- a/Milestone_5/Module_29.5/01_About Module 29.html
+++ b/Milestone_5/Module_29.5/01_About Module 29.html
@@ -14,6 +14,13 @@
             <li>Deposite filed update</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Share function for deposit and withdraw and balance
+        </h2>
+        <ul>
+            <li>Withdrow and total balance update</li>
+        </ul>
+    </div>
 
 </body>
 </html>
