m-29.5 v-3: Input validation and refactoring

--- a/Milestone_5/Module_29.5/01_About Module 29.html
+++ b/Milestone_5/Module_29.5/01_About Module 29.html
@@ -21,6 +21,13 @@
             <li>Withdrow and total balance update</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Error handling, more functions, different balance calculation
+        </h2>
+        <ul>
+            <li>Input validation and refactoring</li>
+        </ul>
+    </div>
 
 </body>
 </html>
