--- a/Milestone_5/Module_29.5/01_About Module 29.html
+++ b/Milestone_5/Module_29.5/01_About Module 29.html
@@ -28,6 +28,13 @@
             <li>Input validation and refactoring</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Revisit id, class selector, querySelector, querySelectorAll
+        </h2>
+        <ul>
+            <li>Players style add by js</li>
+        </ul>
+    </div>
 
 </body>
 </html>
