m-29.5 v-5: Add Event by event bubble

--- a/Milestone_5/Module_29.5/01_About Module 29.html
+++ b/Milestone_5/Module_29.5/01_About Module 29.html
@@ -35,6 +35,20 @@
             <li>Players style add by js</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Revisit id, class selector, querySelector, querySelectorAll
+        </h2>
+        <ul>
+            <li>Players style add by js</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>5 (advanced) Event Bubble in a semi complex situation
+        </h2>
+        <ul>
+            <li>Add Event by event bubble</li>
+        </ul>
+    </div>
 
 </body>
 </html>
