m-30 v-2: Recap of DOM

--- a/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
+++ b/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
@@ -14,6 +14,13 @@
             <li>Recap of JavaScript</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Recap of DOM Manipulation and event handler
+        </h2>
+        <ul>
+            <li>Recap of DOM</li>
+        </ul>
+    </div>
 
 </body>
 </html>
