--- a/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
+++ b/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
@@ -21,6 +21,13 @@
             <li>Recap of DOM</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Breakup with var to have a relationship with Let and const
+        </h2>
+        <ul>
+            <li>Uses of let and const</li>
+        </ul>
+    </div>
 
 </body>
 </html>
