--- a/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
+++ b/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
@@ -28,6 +28,13 @@
             <li>Uses of let and const</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Function default parameter for not provided values
+        </h2>
+        <ul>
+            <li>Set default parameter value</li>
+        </ul>
+    </div>
 
 </body>
 </html>
