--- a/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
+++ b/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
@@ -35,6 +35,13 @@
             <li>Set default parameter value</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Template string, multiple line string, dynamic string
+        </h2>
+        <ul>
+            <li>use `` for multiline string</li>
+        </ul>
+    </div>
 
 </body>
 </html>
