--- a/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
+++ b/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
@@ -42,6 +42,13 @@
             <li>use `` for multiline string</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Arrow function, multiple parameter, function body
+        </h2>
+        <ul>
+            <li>How to declear arrow function</li>
+        </ul>
+    </div>
 
 </body>
 </html>
