m-30 v-7: How to declear big arrow function

--- a/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
+++ b/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
@@ -49,6 +49,13 @@
             <li>How to declear arrow function</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.More Arrow functions and big arrow functionbody
+        </h2>
+        <ul>
+            <li>How to declear big arrow function</li>
+        </ul>
+    </div>
 
 </body>
 </html>
