m-30 v-8: Get as speard value in an array

--- a/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
+++ b/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
@@ -57,5 +57,13 @@
         </ul>
     </div>
 
+    <div class="video">
+        <h2>8.Spread operator, array max, copy arrays
+        </h2>
+        <ul>
+            <li>Get as speard value in an array</li>
+        </ul>
+    </div>
+
 </body>
 </html>
