--- a/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
+++ b/Milestone_6 - Intermediate js, AP/Module_30 - JS recap and basic ES6/01_About Module 29.html
@@ -56,12 +56,18 @@
             <li>How to declear big arrow function</li>
         </ul>
     </div>
-
     <div class="video">
         <h2>8.Spread operator, array max, copy arrays
         </h2>
         <ul>
             <li>Get as speard value in an array</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>9.Module Summary and ES6 Recap
+        </h2>
+        <ul>
+            <li>Module Recap</li>
         </ul>
     </div>
 
