--- a/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
+++ b/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
@@ -14,6 +14,13 @@
             <li>Recap of Previoues module</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Destructuring Object to extract values to variables
+        </h2>
+        <ul>
+            <li>How to destructuring an object</li>
+        </ul>
+    </div>
 
 </body>
 </html>
