--- a/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
+++ b/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
@@ -21,6 +21,13 @@
             <li>How to destructuring an object</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.(advanced) Array Destructuring, nested object Optional chaining
+        </h2>
+        <ul>
+            <li>How to chaining an object</li>
+        </ul>
+    </div>
 
 </body>
 </html>
