m-31 v-4: How to array mapping

--- a/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
+++ b/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
@@ -28,6 +28,13 @@
             <li>How to chaining an object</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Array map to do one line loop magic
+        </h2>
+        <ul>
+            <li>How to array mapping</li>
+        </ul>
+    </div>
 
 </body>
 </html>
