--- a/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
+++ b/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
@@ -35,6 +35,13 @@
             <li>How to array mapping</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Map string array, array of objects map, foreach
+        </h2>
+        <ul>
+            <li>Uses map and forEach</li>
+        </ul>
+    </div>
 
 </body>
 </html>
