--- a/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
+++ b/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
@@ -42,6 +42,13 @@
             <li>Uses map and forEach</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.(advanced) Implement filter, find on an array of objects
+        </h2>
+        <ul>
+            <li>Uses filter and find</li>
+        </ul>
+    </div>
 
 </body>
 </html>
