m-31 v-4 : How to class declare

--- a/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
+++ b/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
@@ -49,6 +49,13 @@
             <li>Uses filter and find</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(advanced) Class, constructor, method, create object from class
+        </h2>
+        <ul>
+            <li>How to class declare</li>
+        </ul>
+    </div>
 
 </body>
 </html>
