--- a/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
+++ b/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
@@ -56,6 +56,13 @@
             <li>How to class declare</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.(advanced) Inheritance, extends class, super, class method
+        </h2>
+        <ul>
+            <li>Class Inheritance</li>
+        </ul>
+    </div>
 
 </body>
 </html>
