--- a/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
+++ b/Milestone_6 - Intermediate js, AP/Module_31 - Advance ES6, Class, Inharitent/01_About Module 31.html
@@ -63,6 +63,13 @@
             <li>Class Inheritance</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.(advanced) Prototypical inheritance and module summary
+        </h2>
+        <ul>
+            <li>Ptototype Inheritance</li>
+        </ul>
+    </div>
 
 </body>
 </html>
