--- a/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
+++ b/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
@@ -21,6 +21,13 @@
             <li>JSON data convert</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Json Placeholder, Get Data, Display Data On UI
+        </h2>
+        <ul>
+            <li>JSON data load form server</li>
+        </ul>
+    </div>
 
 </body>
 </html>
