m-32 v-4: JSON data load form server with more examples

--- a/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
+++ b/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
@@ -28,6 +28,13 @@
             <li>JSON data load form server</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Load More Data, More API, Send Data To Function
+        </h2>
+        <ul>
+            <li>JSON data load form server with more examples</li>
+        </ul>
+    </div>
 
 </body>
 </html>
