--- a/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/03.api.html
+++ b/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/03.api.html
@@ -9,6 +9,8 @@
 <body>
     <h1>API start</h1>
     <button onclick="data()">Load Data</button>
+    <button onclick="users()">Load Users</button>
+    <button onclick="photos()">Load Photos</button>
 
     <!-- JS Script -->
     <script src="03.api.js"></script>
