m-32 v-5: Display loaded data

--- a/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
+++ b/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
@@ -35,6 +35,13 @@
             <li>JSON data load form server with more examples</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Dynamically Display Loaded Data On Your Website
+        </h2>
+        <ul>
+            <li>Display loaded data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
