--- a/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/03.api.html
+++ b/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/03.api.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>API start</h1>
+    <h2>User Information</h2>
+    <ul id="user_list">
+        
+    </ul>
     <button onclick="data()">Load Data</button>
     <button onclick="users()">Load Users</button>
     <button onclick="photos()">Load Photos</button>
