m-32 v-6: Display post data

--- a/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
+++ b/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
@@ -42,6 +42,13 @@
             <li>Display loaded data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Load Posts And Display On The Website With Css
+        </h2>
+        <ul>
+            <li>Display post data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
