--- a/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
+++ b/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
@@ -49,6 +49,13 @@
             <li>Display post data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Get, Post, Patch, Delete, Crud, Get Vs Post
+        </h2>
+        <ul>
+            <li>How to right post</li>
+        </ul>
+    </div>
 
 </body>
 </html>
