m-32 v-8: API debug with network tab

--- a/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
+++ b/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
@@ -56,6 +56,13 @@
             <li>How to right post</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Debug Api, Network Tab,Status Code, Headers, Bad Api
+        </h2>
+        <ul>
+            <li>API debug with network tab</li>
+        </ul>
+    </div>
 
 </body>
 </html>
