--- a/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
+++ b/Milestone_6 - Intermediate js, AP/Module_32 - Getting started API/01_About Module 32.html
@@ -63,6 +63,13 @@
             <li>API debug with network tab</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary And Two Home works
+        </h2>
+        <ul>
+            <li>Module recape</li>
+        </ul>
+    </div>
 
 </body>
 </html>
