--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
@@ -14,6 +14,13 @@
             <li>Get and displey kanye quate</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.(advanced) Handle and display Nested API data
+        </h2>
+        <ul>
+            <li>Ramdom user API use</li>
+        </ul>
+    </div>
 
 </body>
 </html>
