--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
@@ -21,6 +21,13 @@
             <li>Ramdom user API use</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.International Travel, Display countries name, capital
+        </h2>
+        <ul>
+            <li>Country name and capital by API</li>
+        </ul>
+    </div>
 
 </body>
 </html>
