m-32 v-4: Display dynamic data about country

--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
@@ -28,6 +28,13 @@
             <li>Country name and capital by API</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.(advanced) Call dynamic API, load dynamic data to display
+        </h2>
+        <ul>
+            <li>Display dynamic data about country</li>
+        </ul>
+    </div>
 
 </body>
 </html>
