--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/03.countries.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/03.countries.html
@@ -12,9 +12,19 @@
             margin: 10px;
             padding: 10px;
         }
+        #countries{
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+        }
     </style>
 </head>
 <body>
+    <h1>Country Detiles</h1>
+    <section id="detailes">
+        
+    </section>
+
+
     <h1>Countries</h1>
     <section id="countries">
 
