m-33 v-5: Create dynamic url mealdb

--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
@@ -35,6 +35,13 @@
             <li>Display dynamic data about country</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Explore meal db api and create dynamic url to load meals
+        </h2>
+        <ul>
+            <li>Create dynamic url mealdb</li>
+        </ul>
+    </div>
 
 </body>
 </html>
