--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
@@ -42,6 +42,13 @@
             <li>Create dynamic url mealdb</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Display dynamic search result using bootstrap cards
+        </h2>
+        <ul>
+            <li>Display dynamic search result mealdb</li>
+        </ul>
+    </div>
 
 </body>
 </html>
