--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/05.mealdb.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/05.mealdb.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     <h1 class="text-center text-info">Search Food</h1>
-
+    <!-- food search -->
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search_field" type="text" class="form-control" placeholder="search your favourite food" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="searchFood()" class="btn btn-outline-secondary" type="button" id="button_search">Button</button>
+    </div>
+    <!-- Display food -->
+    <div id="search_result" class="row row-cols-1 row-cols-md-3 g-4">
+        
       </div>
 
 
