m-33 v-7: Click and display data mealdb

--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
@@ -49,6 +49,13 @@
             <li>Display dynamic search result mealdb</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Create dynamic url based on click and display data
+        </h2>
+        <ul>
+            <li>Click and display data mealdb</li>
+        </ul>
+    </div>
 
 </body>
 </html>
