--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
@@ -56,6 +56,13 @@
             <li>Click and display data mealdb</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.(advanced) Remove previous result and async await
+        </h2>
+        <ul>
+            <li>async await</li>
+        </ul>
+    </div>
 
 </body>
 </html>
