--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
@@ -63,6 +63,13 @@
             <li>async await</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary handle fetch error, use try catch
+        </h2>
+        <ul>
+            <li>fetch error, use try catch</li>
+        </ul>
+    </div>
 
 </body>
 </html>
