m-33 v-9: Fetch error, use try catch

--- a/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
+++ b/Milestone_6 - Intermediate js, AP/Module_33 - API examplaes with edge cases/01_About Module 33.html
@@ -67,7 +67,7 @@
         <h2>9.Module Summary handle fetch error, use try catch
         </h2>
         <ul>
-            <li>fetch error, use try catch</li>
+            <li>Fetch error, use try catch</li>
         </ul>
     </div>
 
