--- a/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
@@ -14,6 +14,13 @@
             <li>JS data type</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Primitive data type and non-primitive data type
+        </h2>
+        <ul>
+            <li>Primitive and Non-premitive data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
