--- a/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
@@ -21,6 +21,13 @@
             <li>Primitive and Non-premitive data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Different Truthy and Falsy values in JavaScript
+        </h2>
+        <ul>
+            <li>True false check</li>
+        </ul>
+    </div>
 
 </body>
 </html>
