m-34 v-4: How we get Null Vs Undefined

--- a/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
@@ -28,6 +28,13 @@
             <li>True false check</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Null Vs Undefined, different ways you will get undefined
+        </h2>
+        <ul>
+            <li>How we get Null Vs Undefined</li>
+        </ul>
+    </div>
 
 </body>
 </html>
