--- a/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
@@ -35,6 +35,13 @@
             <li>How we get Null Vs Undefined</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.double equal (==) vs triple equal (===), implicit conversion
+        </h2>
+        <ul>
+            <li>== vs ===</li>
+        </ul>
+    </div>
 
 </body>
 </html>
