--- a/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
@@ -42,6 +42,13 @@
             <li>== vs ===</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Block scope, global scope, Hoisting
+        </h2>
+        <ul>
+            <li>Scope types</li>
+        </ul>
+    </div>
 
 </body>
 </html>
