--- a/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
@@ -49,6 +49,13 @@
             <li>Scope types</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(advanced) Closure, encapsulation, private variable
+        </h2>
+        <ul>
+            <li>Closure function</li>
+        </ul>
+    </div>
 
 </body>
 </html>
