--- a/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_34 - JS tricky concept/01_About Module 33.5.html
@@ -56,6 +56,13 @@
             <li>Closure function</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.(advanced) Callback function and pass different functions
+        </h2>
+        <ul>
+            <li>Callback function</li>
+        </ul>
+    </div>
 
 </body>
 </html>
