--- a/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
@@ -14,6 +14,13 @@
             <li>Create Object</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Object method property review
+        </h2>
+        <ul>
+            <li>Object method</li>
+        </ul>
+    </div>
 
 </body>
 </html>
