m-35 v-3: Operation in object

--- a/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
@@ -21,6 +21,13 @@
             <li>Object method</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Keys, values, entities, delete, seal, freeze
+        </h2>
+        <ul>
+            <li>Operation in object</li>
+        </ul>
+    </div>
 
 </body>
 </html>
