--- a/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
@@ -28,6 +28,13 @@
             <li>Operation in object</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Loop through an object using for in, for of, object entries
+        </h2>
+        <ul>
+            <li>Loop object</li>
+        </ul>
+    </div>
 
 </body>
 </html>
