--- a/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
@@ -35,6 +35,13 @@
             <li>Loop object</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.(advanced) Compare objects, referential integrity
+        </h2>
+        <ul>
+            <li>Compare Object</li>
+        </ul>
+    </div>
 
 </body>
 </html>
