--- a/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
@@ -42,6 +42,13 @@
             <li>Compare Object</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.(advanced) Use bind to borrow method from another object
+        </h2>
+        <ul>
+            <li>Bind Method</li>
+        </ul>
+    </div>
 
 </body>
 </html>
