m-35 v-7: Call Apply use

--- a/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
@@ -49,6 +49,13 @@
             <li>Bind Method</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(advanced) Difference between bind, call and apply
+        </h2>
+        <ul>
+            <li>Call Apply use</li>
+        </ul>
+    </div>
 
 </body>
 </html>
