--- a/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
@@ -56,6 +56,13 @@
             <li>Call Apply use</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.( super advanced) Understand this keyword in JavaScript
+        </h2>
+        <ul>
+            <li>Use of this</li>
+        </ul>
+    </div>
 
 </body>
 </html>
