--- a/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35 - Advanced JS concept/01_About Module 35.html
@@ -63,6 +63,13 @@
             <li>Use of this</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module summary and checklist
+        </h2>
+        <ul>
+            <li>Module summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
