--- a/Milestone_6 - Intermediate js, AP/Module_35.5 - World tour API/01_About Module 35.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35.5 - World tour API/01_About Module 35.5.html
@@ -14,6 +14,13 @@
             <li>Module Checklist</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Common API Data access related issues
+        </h2>
+        <ul>
+            <li>API access</li>
+        </ul>
+    </div>
 
 </body>
 </html>
