--- a/Milestone_6 - Intermediate js, AP/Module_35.5 - World tour API/01_About Module 35.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_35.5 - World tour API/01_About Module 35.5.html
@@ -21,6 +21,13 @@
             <li>API access</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Add Spinner And Toggle Content While Loading Data
+        </h2>
+        <ul>
+            <li>Data Load</li>
+        </ul>
+    </div>
 
 </body>
 </html>
