--- a/Milestone_6 - Intermediate js, AP/Module_36.5 - API recape/01_About Module 36.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_36.5 - API recape/01_About Module 36.5.html
@@ -14,6 +14,13 @@
             <li>Get API key and load temperature</li>
         </ul>
     </div> 
+    <div class="video">
+        <h2>2.Display temperature, city, dynamic weather icon
+        </h2>
+        <ul>
+            <li>Display Data</li>
+        </ul>
+    </div> 
 
 </body>
 </html>
