--- a/Milestone_6 - Intermediate js, AP/Module_36.5 - API recape/01_About Module 36.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_36.5 - API recape/01_About Module 36.5.html
@@ -21,6 +21,13 @@
             <li>Display Data</li>
         </ul>
     </div> 
+    <div class="video">
+        <h2>3.Understanding closure and return multiples from function
+        </h2>
+        <ul>
+            <li>Closure JS</li>
+        </ul>
+    </div> 
 
 </body>
 </html>
