--- a/Milestone_6 - Intermediate js, AP/Module_36.5 - API recape/01_About Module 36.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_36.5 - API recape/01_About Module 36.5.html
@@ -28,6 +28,13 @@
             <li>Closure JS</li>
         </ul>
     </div> 
+    <div class="video">
+        <h2>4.(advanced) Hoisting, block scope, scope chain
+        </h2>
+        <ul>
+            <li>Scope JS</li>
+        </ul>
+    </div>
 
 </body>
 </html>
