m-36.5 v-5: Git clone with everything

--- a/Milestone_6 - Intermediate js, AP/Module_36.5 - API recape/01_About Module 36.5.html
+++ b/Milestone_6 - Intermediate js, AP/Module_36.5 - API recape/01_About Module 36.5.html
@@ -35,6 +35,13 @@
             <li>Scope JS</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Transfer assignment private repo to your github private repo
+        </h2>
+        <ul>
+            <li>Git clone with everything</li>
+        </ul>
+    </div>
 
 </body>
 </html>
