--- a/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
+++ b/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
@@ -14,6 +14,13 @@
             <li>How to internet works</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.How Browser works, DOM tree, Render Tree
+        </h2>
+        <ul>
+            <li>How to browser works</li>
+        </ul>
+    </div>
 
 </body>
 </html>
