--- a/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
+++ b/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
@@ -28,6 +28,13 @@
             <li>How to JS works</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.setTimeout simple Asynchronous JS using
+        </h2>
+        <ul>
+            <li>Set time in JS</li>
+        </ul>
+    </div>
 
 </body>
 </html>
