--- a/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
+++ b/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
@@ -35,6 +35,13 @@
             <li>Set time in JS</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Recognize fetch as an Asynchronous activity
+        </h2>
+        <ul>
+            <li>How to work fetch</li>
+        </ul>
+    </div>
 
 </body>
 </html>
