--- a/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
+++ b/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
@@ -42,6 +42,13 @@
             <li>How to work fetch</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.setInterval and clearInterval with x++ and ++x
+        </h2>
+        <ul>
+            <li>Time interval</li>
+        </ul>
+    </div>
 
 </body>
 </html>
