m-37 v-7: Discuss about work of js runtime

--- a/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
+++ b/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
@@ -49,6 +49,13 @@
             <li>Time interval</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(advanced) JavaScript event loop and concurrency
+        </h2>
+        <ul>
+            <li>Discuss about work of js runtime</li>
+        </ul>
+    </div>
 
 </body>
 </html>
