m-37 v-8: Debug in VS code

--- a/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
+++ b/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
@@ -56,6 +56,13 @@
             <li>Discuss about work of js runtime</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Integrate chrome devtool console with VS Code
+        </h2>
+        <ul>
+            <li>Debug in VS code</li>
+        </ul>
+    </div>
 
 </body>
 </html>
