--- a/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
+++ b/Milestone_7 - Browser & Debug/Module_ 37 - JS working in browser/01_About Module 37.html
@@ -63,6 +63,13 @@
             <li>Debug in VS code</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module summary and HTTP layers
+        </h2>
+        <ul>
+            <li>Discuss about http layer</li>
+        </ul>
+    </div>
 
 </body>
 </html>
