--- a/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
+++ b/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Module 37</title>
+    <title>About Module 38</title>
 </head>
 <body>
     <div class="video">
@@ -12,6 +12,13 @@
         </h2>
         <ul>
             <li>Discuss about DOM and BOM</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>2.Browser alert, confirm, prompt with examples
+        </h2>
+        <ul>
+            <li>Discuss alert, confirm, prompt</li>
         </ul>
     </div>
 
