m-38 v-3: Differant URL parts

--- a/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
+++ b/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
@@ -21,6 +21,13 @@
             <li>Discuss alert, confirm, prompt</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Location, URL parts, query string, href, hash, assign, reload
+        </h2>
+        <ul>
+            <li>Differant URL parts</li>
+        </ul>
+    </div>
 
 </body>
 </html>
