m-38 v-4: Discuss browse history

--- a/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
+++ b/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
@@ -28,6 +28,13 @@
             <li>Differant URL parts</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.History api to navigate back, forward, go, history length
+        </h2>
+        <ul>
+            <li>Discuss browse history</li>
+        </ul>
+    </div>
 
 </body>
 </html>
