--- a/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
+++ b/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
@@ -35,6 +35,13 @@
             <li>Discuss browse history</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.(advanced) Cookies, dev tool application tab, get cookie value
+        </h2>
+        <ul>
+            <li>Discuss Cookies</li>
+        </ul>
+    </div>
 
 </body>
 </html>
