--- a/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
+++ b/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
@@ -42,6 +42,13 @@
             <li>Discuss Cookies</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Local storage, session storage, storage info in browser storage
+        </h2>
+        <ul>
+            <li>Discuss browser storage</li>
+        </ul>
+    </div>
 
 </body>
 </html>
