m-38 v-7: Set data in browser local storage

--- a/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
+++ b/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
@@ -49,6 +49,13 @@
             <li>Discuss browser storage</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Dynamically set and read from local, session storage
+        </h2>
+        <ul>
+            <li>Set data in browser local storage</li>
+        </ul>
+    </div>
 
 </body>
 </html>
