m-38 v-8: Load data from browser local storage

--- a/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
+++ b/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
@@ -56,6 +56,13 @@
             <li>Set data in browser local storage</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.(advanced) retrieve local storage value and display them
+        </h2>
+        <ul>
+            <li>Load data from browser local storage</li>
+        </ul>
+    </div>
 
 </body>
 </html>
