--- a/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
+++ b/Milestone_7 - Browser & Debug/Module_38 - Browser API method/01_About Module 38.html
@@ -63,6 +63,13 @@
             <li>Load data from browser local storage</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary, ContentEditable, chrome restart
+        </h2>
+        <ul>
+            <li>About Module summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
