m-39 v-2: Element, event listener, accessibility

--- a/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
+++ b/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
@@ -14,6 +14,13 @@
             <li>Overview of browser dev tool</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Element tab, HTML event listener, accessibility list
+        </h2>
+        <ul>
+            <li>Element, event listener, accessibility</li>
+        </ul>
+    </div>
 
 </body>
 </html>
