m-39 v-3: Discuss console tab

--- a/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
+++ b/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
@@ -21,6 +21,13 @@
             <li>Element, event listener, accessibility</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Console tab, preserve log, log levels, console api
+        </h2>
+        <ul>
+            <li>Discuss console tab</li>
+        </ul>
+    </div>
 
 </body>
 </html>
