--- a/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
+++ b/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
@@ -28,6 +28,13 @@
             <li>Discuss console tab</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Sources tab, break point, call stack, event break
+        </h2>
+        <ul>
+            <li>Discuss Sources tab</li>
+        </ul>
+    </div>
 
 </body>
 </html>
