m-39 v-5: Fancy slider and fix

--- a/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
+++ b/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
@@ -35,6 +35,13 @@
             <li>Discuss Sources tab</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Debug fancy slider and fix image display, console table
+        </h2>
+        <ul>
+            <li>Fancy slider and fix</li>
+        </ul>
+    </div>
 
 </body>
 </html>
