--- a/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
+++ b/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
@@ -42,6 +42,13 @@
             <li>Fancy slider and fix</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.More debug to fix slider to slide by getting duration
+        </h2>
+        <ul>
+            <li>Debug to fix slider</li>
+        </ul>
+    </div>
 
 </body>
 </html>
