m-39 v-7: Fix negative duration

--- a/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
+++ b/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
@@ -49,6 +49,13 @@
             <li>Debug to fix slider</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Fix negative duration and how to read others code
+        </h2>
+        <ul>
+            <li>Fix negative duration</li>
+        </ul>
+    </div>
 
 </body>
 </html>
