--- a/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
+++ b/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
@@ -56,6 +56,13 @@
             <li>Fix negative duration</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Performance tab, memory tab, Lighthouse tab
+        </h2>
+        <ul>
+            <li>Performance tab</li>
+        </ul>
+    </div>
 
 </body>
 </html>
