m-39 v-9: Try to install react app

--- a/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
+++ b/Milestone_7 - Browser & Debug/Module_39 - Dev tool/01_About Module 39.html
@@ -57,10 +57,10 @@
         </ul>
     </div>
     <div class="video">
-        <h2>8.Performance tab, memory tab, Lighthouse tab
+        <h2>9.Module Summary, Try out Create React APP
         </h2>
         <ul>
-            <li>Performance tab</li>
+            <li>Try to install react app</li>
         </ul>
     </div>
 
