--- a/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
+++ b/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
@@ -14,6 +14,13 @@
             <li>Overview Element tab</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Dev Tool Console Source Tab Review
+        </h2>
+        <ul>
+            <li>Overview Source tab</li>
+        </ul>
+    </div>
 
 </body>
 </html>
