m-40 v-3: Explore Salary App

--- a/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
+++ b/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
@@ -21,6 +21,13 @@
             <li>Overview Source tab</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Explore Salary App and try to add a Record
+        </h2>
+        <ul>
+            <li>Explore Salary App</li>
+        </ul>
+    </div>
 
 </body>
 </html>
