--- a/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
+++ b/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
@@ -28,6 +28,13 @@
             <li>Explore Salary App</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Logical Not, double Not, fix add to Record to chart
+        </h2>
+        <ul>
+            <li>Salary Chart fix</li>
+        </ul>
+    </div>
 
 </body>
 </html>
