--- a/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
+++ b/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
@@ -35,6 +35,13 @@
             <li>Salary Chart fix</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Lost with errors and trying to find ways to fix it
+        </h2>
+        <ul>
+            <li>Explore record count</li>
+        </ul>
+    </div>
 
 </body>
 </html>
