--- a/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
+++ b/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
@@ -42,6 +42,13 @@
             <li>Explore record count</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Fix Duplicate names on the chart and display chart
+        </h2>
+        <ul>
+            <li>Duplicate names fix</li>
+        </ul>
+    </div>
 
 </body>
 </html>
