m-40 v-7: Explains Unique name

--- a/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
+++ b/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
@@ -49,6 +49,13 @@
             <li>Duplicate names fix</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Explains Unique name generation for duplicate data
+        </h2>
+        <ul>
+            <li>Explains Unique name</li>
+        </ul>
+    </div>
 
 </body>
 </html>
