--- a/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
+++ b/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
@@ -21,6 +21,13 @@
             <li>Create and use typescript</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Basic typescript type number string boolean
+        </h2>
+        <ul>
+            <li>Basic typescript</li>
+        </ul>
+    </div>
 
 </body>
 </html>
