m-41 v-5: Apply types for array

--- a/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
+++ b/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
@@ -35,6 +35,13 @@
             <li>Set function parameter type</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Apply types for array and get error for type mismatch
+        </h2>
+        <ul>
+            <li>Apply types for array</li>
+        </ul>
+    </div>
 
 </body>
 </html>
