m-41 v-7: Interface and its extend

--- a/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
+++ b/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
@@ -49,6 +49,13 @@
             <li>Object and arrow function types</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(advanced) Interface and extend interfaces
+        </h2>
+        <ul>
+            <li>Interface and its extend</li>
+        </ul>
+    </div>
 
 </body>
 </html>
