m-41 v-8: Class and private field, JS compile

--- a/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
+++ b/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
@@ -56,6 +56,13 @@
             <li>Interface and its extend</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.(advanced) class and explore methods private fields
+        </h2>
+        <ul>
+            <li>Class and private field, JS compile</li>
+        </ul>
+    </div>
 
 </body>
 </html>
