--- a/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
+++ b/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
@@ -21,6 +21,13 @@
             <li>ES6 examples</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Array Methods Map Filter Find Foreach
+        </h2>
+        <ul>
+            <li>Array Method</li>
+        </ul>
+    </div>
 
 </body>
 </html>
