m-42 v-5: Json, Fetch Array Add Or Remove Using Dots

--- a/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
+++ b/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
@@ -35,6 +35,13 @@
             <li>Array And Object Destructuring</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Json, Fetch, Keys, Values, Array Add Or Remove Using Dots
+        </h2>
+        <ul>
+            <li>Json, Fetch Array Add Or Remove Using Dots</li>
+        </ul>
+    </div>
 
 </body>
 </html>
