m-43.5 v-2: Try to find the problem

--- a/Milestone_7 - Browser & Debug/Module_43.5 - Browser debug/01_About Module 43.html
+++ b/Milestone_7 - Browser & Debug/Module_43.5 - Browser debug/01_About Module 43.html
@@ -14,6 +14,13 @@
             <li>Make a img slider</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.How to approach a debugging session with an error
+        </h2>
+        <ul>
+            <li>Try to find the problem</li>
+        </ul>
+    </div>
 
 </body>
 </html>
