m-43.5 v-5: Technique for debugging

--- a/Milestone_7 - Browser & Debug/Module_43.5 - Browser debug/01_About Module 43.html
+++ b/Milestone_7 - Browser & Debug/Module_43.5 - Browser debug/01_About Module 43.html
@@ -35,6 +35,13 @@
             <li>Find the problem</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Use Elimination technique for debugging
+        </h2>
+        <ul>
+            <li>Technique for debugging</li>
+        </ul>
+    </div>
 
 </body>
 </html>
