--- a/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
+++ b/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
@@ -14,6 +14,13 @@
             <li>Module overview</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Web component, 4 types of component, identify component
+        </h2>
+        <ul>
+            <li>Discuss component</li>
+        </ul>
+    </div>
 
 </body>
 </html>
