m-44 v-6: Send data to html elements using props

--- a/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
+++ b/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
@@ -42,6 +42,13 @@
             <li>Discuss Routing</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Explore destructuring and send data to html elements using props
+        </h2>
+        <ul>
+            <li>Send data to html elements using props</li>
+        </ul>
+    </div>
 
 </body>
 </html>
